--- a/Miralls_de_Pedra/Config/DefaultGame.ini
+++ b/Miralls_de_Pedra/Config/DefaultGame.ini
@@ -1,3 +1,5 @@
 [/Script/EngineSettings.GeneralProjectSettings]
 ProjectID=FB2ECF3D432414623E0F54BC3291AC43
-ProjectName=First Person BP Game Template
+ProjectName=Mirall de Pedra
+Description=Projecte Videojoc Final de curs 2n A3D
+
