--- a/Miralls_de_Pedra/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Miralls_de_Pedra/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -350,7 +350,7 @@ UdpMessagingSettings=EnhancedInputDeveloperSettings.Enhanced Input.EnhancedInput
 WmfMediaSettings=EnhancedInputDeveloperSettings.Enhanced Input.EnhancedInputPlatformSettings_Android,EnhancedInputDeveloperSettings.Enhanced Input.EnhancedInputPlatformSettings_IOS,EnhancedInputDeveloperSettings.Enhanced Input.EnhancedInputPlatformSettings_Linux,EnhancedInputDeveloperSettings.Enhanced Input.EnhancedInputPlatformSettings_LinuxArm64,EnhancedInputDeveloperSettings.Enhanced Input.EnhancedInputPlatformSettings_Mac,EnhancedInputDeveloperSettings.Enhanced Input.EnhancedInputPlatformSettings_TVOS,EnhancedInputDeveloperSettings.Enhanced Input.EnhancedInputPlatformSettings_Windows,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierSmoothDelta,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierDeadZone,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierResponseCurveExponential,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierFOVScaling,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerDown,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPressed,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPulse,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerReleased,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerHold,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerHoldAndRelease,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerTap,InputSettings.Platforms.InputPlatformSettings_Android,InputSettings.Platforms.InputPlatformSettings_IOS,InputSettings.Platforms.InputPlatformSettings_Linux,InputSettings.Platforms.InputPlatformSettings_LinuxArm64,InputSettings.Platforms.InputPlatformSettings_Mac,InputSettings.Platforms.InputPlatformSettings_TVOS,InputSettings.Platforms.InputPlatformSettings_Windows
 
 [ContentBrowser]
-ContentBrowserTab1.SelectedPaths=/Game/ASSETS/Maps/LVL1
+ContentBrowserTab1.SelectedPaths=/Game/ASSETS/Maps/LVL1/Interior_Campanar
 ContentBrowserTab1.PluginFilters=
 AssetPropertyPicker.ThumbnailSize=2
 AssetPropertyPicker.CurrentViewType=0
@@ -403,7 +403,7 @@ LastLevel=/Game/Maps/InteriorCampanar
 [DetailPropertyExpansion]
 WorldPartitionRuntimeHashSet="\"Object\" "
 WorldPartitionRuntimeHash="\"Object\" "
-Object="\"Object\" \"Object.Appearance.Font\" \"Object.Appearance.Font.OutlineSettings\" "
+Object="\"Object\" "
 Actor="\"Object\" "
 SceneComponent="\"Object\" "
 ActorComponent="\"Object\" "
@@ -597,19 +597,21 @@ InterchangePipelineBase="\"Object\" "
 CleanShutdown=False
 DebuggerAttached=False
 RecentAssetEditors=WidgetBlueprintEditor
+RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=
 RecentAssetEditors=
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=StaticMeshEditor
 RecentAssetEditors=StaticMeshEditor
-RecentAssetEditors=StaticMeshEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=StaticMeshEditor
-OpenAssetsAtExit=/Game/BLUEPRINTS/BP_Door.BP_Door
+RecentAssetEditors=StaticMeshEditor
 OpenAssetsAtExit=/Game/BLUEPRINTS/BP_DoorInterior.BP_DoorInterior
+OpenAssetsAtExit=/Game/BLUEPRINTS/BP_Door.BP_Door
 OpenAssetsAtExit=/Game/BLUEPRINTS/BP_UserInterfaceInteraction.BP_UserInterfaceInteraction
 OpenAssetsAtExit=/Game/BLUEPRINTS/BP_UserInterfaceInteractionInteriorCampanar.BP_UserInterfaceInteractionInteriorCampanar
+OpenAssetsAtExit=/Game/ASSETS/Maps/LVL1/Interior_Campanar/Cube_035.Cube_035
 
 [DetailCategories]
 Actor.TransformCommon=True
@@ -1390,13 +1392,13 @@ MinimapUnloadedOpacity=0.660000
 PerWorldEditorSettings=(("/Game/Maps/FirstPersonMap.FirstPersonMap", ()))
 
 [AssetEditorSubsystemRecents]
-MRUItem0=/Game/BLUEPRINTS/BP_UserInterfaceInteractionInteriorCampanar
-MRUItem1=/Game/BLUEPRINTS/BP_UserInterfaceInteraction
-MRUItem2=/Game/Maps/InteriorCampanar
-MRUItem3=/Game/Maps/FirstPersonMap
-MRUItem4=/Game/BLUEPRINTS/BP_Door
-MRUItem5=/Game/BLUEPRINTS/BP_DoorInterior
-MRUItem6=/Game/ASSETS/Maps/LVL1/Interior_Campanar/Cube_035
+MRUItem0=/Game/ASSETS/Maps/LVL1/Interior_Campanar/Cube_035
+MRUItem1=/Game/BLUEPRINTS/BP_UserInterfaceInteractionInteriorCampanar
+MRUItem2=/Game/BLUEPRINTS/BP_UserInterfaceInteraction
+MRUItem3=/Game/Maps/InteriorCampanar
+MRUItem4=/Game/Maps/FirstPersonMap
+MRUItem5=/Game/BLUEPRINTS/BP_Door
+MRUItem6=/Game/BLUEPRINTS/BP_DoorInterior
 MRUItem7=/Game/ASSETS/Maps/LVL1/Cube_183
 MRUItem8=/Game/ASSETS/Maps/LVL1/Cube_060
 MRUItem9=/Game/Player/Blueprints/BP_FirstPersonCharacter
@@ -1446,14 +1448,14 @@ bPreserveLocalTransform=False
 bDeleteExistingMorphTargetCurves=False
 
 [MessageLog]
-LastLogListing=PIE
+LastLogListing=FBXImport
 
 [PlacementMode]
+RecentlyPlaced=/Script/Engine.PlayerStart;/Engine/Transient.ActorFactoryPlayerStart_0
 RecentlyPlaced=/Game/ASSETS/Maps/LVL1/Cube_135.Cube_135;
 RecentlyPlaced=/Game/ASSETS/Maps/LVL1/Cube_227.Cube_227;
 RecentlyPlaced=/Game/BLUEPRINTS/BP_DoorInterior.BP_DoorInterior;
 RecentlyPlaced=/Game/BLUEPRINTS/BP_Door1.BP_Door1;
-RecentlyPlaced=/Script/Engine.PlayerStart;/Engine/Transient.ActorFactoryPlayerStart_0
 RecentlyPlaced=/Script/Engine.SkyLight;/Engine/Transient.ActorFactorySkyLight_0
 RecentlyPlaced=/Game/BLUEPRINTS/BP_Door.BP_Door;
 RecentlyPlaced=/Game/Maps/InteriorCampanar.InteriorCampanar;
